[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/basic.theme" type="Theme" id=2]
[ext_resource path="res://Assets/Music/theme.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/Images/cover.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/Orbitron36.tres" type="DynamicFont" id=5]

[node name="Main" type="Spatial"]
script = ExtResource( 1 )

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Menu"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/HBoxContainer"]
margin_left = 280.0
margin_right = 520.0
margin_bottom = 600.0
custom_constants/separation = 20
alignment = 1

[node name="LevelLabel" type="Label" parent="Menu/HBoxContainer/VBoxContainer"]
margin_top = 173.0
margin_right = 240.0
margin_bottom = 197.0
theme = ExtResource( 2 )
text = "Test level"
align = 1

[node name="LevelButton" type="Button" parent="Menu/HBoxContainer/VBoxContainer"]
margin_top = 217.0
margin_right = 240.0
margin_bottom = 243.0
rect_min_size = Vector2( 240, 0 )
theme = ExtResource( 2 )
text = "choose level"

[node name="StartButton" type="Button" parent="Menu/HBoxContainer/VBoxContainer"]
margin_top = 263.0
margin_right = 240.0
margin_bottom = 289.0
theme = ExtResource( 2 )
text = "start"

[node name="HowToButton" type="Button" parent="Menu/HBoxContainer/VBoxContainer"]
margin_top = 309.0
margin_right = 240.0
margin_bottom = 335.0
theme = ExtResource( 2 )
text = "how to play"

[node name="AudioButton" type="Button" parent="Menu/HBoxContainer/VBoxContainer"]
margin_top = 355.0
margin_right = 240.0
margin_bottom = 381.0
theme = ExtResource( 2 )
text = "audio settings"

[node name="CreditsButton" type="Button" parent="Menu/HBoxContainer/VBoxContainer"]
margin_top = 401.0
margin_right = 240.0
margin_bottom = 427.0
theme = ExtResource( 2 )
text = "credits"

[node name="Label" type="Label" parent="Menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -400.0
margin_top = 64.0
margin_right = 400.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 5 )
text = "Light it up"
align = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "Sounds"

[node name="MusicStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
bus = "Music"

[connection signal="mouse_entered" from="Menu/HBoxContainer/VBoxContainer/LevelButton" to="." method="button_mouse_entered"]
[connection signal="mouse_exited" from="Menu/HBoxContainer/VBoxContainer/LevelButton" to="." method="button_mouse_exited"]
[connection signal="pressed" from="Menu/HBoxContainer/VBoxContainer/LevelButton" to="." method="choose_level"]
[connection signal="mouse_entered" from="Menu/HBoxContainer/VBoxContainer/StartButton" to="." method="button_mouse_entered"]
[connection signal="mouse_exited" from="Menu/HBoxContainer/VBoxContainer/StartButton" to="." method="button_mouse_exited"]
[connection signal="pressed" from="Menu/HBoxContainer/VBoxContainer/StartButton" to="." method="start_pressed"]
[connection signal="mouse_entered" from="Menu/HBoxContainer/VBoxContainer/HowToButton" to="." method="button_mouse_entered"]
[connection signal="mouse_exited" from="Menu/HBoxContainer/VBoxContainer/HowToButton" to="." method="button_mouse_exited"]
[connection signal="pressed" from="Menu/HBoxContainer/VBoxContainer/HowToButton" to="." method="open_how_to_menu"]
[connection signal="mouse_entered" from="Menu/HBoxContainer/VBoxContainer/AudioButton" to="." method="button_mouse_entered"]
[connection signal="mouse_exited" from="Menu/HBoxContainer/VBoxContainer/AudioButton" to="." method="button_mouse_exited"]
[connection signal="pressed" from="Menu/HBoxContainer/VBoxContainer/AudioButton" to="." method="open_audio_settings"]
[connection signal="mouse_entered" from="Menu/HBoxContainer/VBoxContainer/CreditsButton" to="." method="button_mouse_entered"]
[connection signal="mouse_exited" from="Menu/HBoxContainer/VBoxContainer/CreditsButton" to="." method="button_mouse_exited"]
[connection signal="pressed" from="Menu/HBoxContainer/VBoxContainer/CreditsButton" to="." method="open_credits"]
